err/frd.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/frd'...
Listing './lib/python3.5/site-packages/frd/db'...
Compiling './lib/python3.5/site-packages/frd/db/mysql.py'...
***   File "./lib/python3.5/site-packages/frd/db/mysql.py", line 65
    except MySQLdb.Error,e:
                        ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/frd/functions'...
Compiling './lib/python3.5/site-packages/frd/functions/base.py'...
***   File "./lib/python3.5/site-packages/frd/functions/base.py", line 47
    print "use gbk replace gb2312 and try again"
                                               ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/frd/functions/file.py'...
***   File "./lib/python3.5/site-packages/frd/functions/file.py", line 170
    print self.info
             ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/frd/functions.py'...
***   File "./lib/python3.5/site-packages/frd/functions.py", line 47
    print "use gbk replace gb2312 and try again"
                                               ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/frd/pygame'...
Compiling './lib/python3.5/site-packages/frd/pygame/game.py'...
***   File "./lib/python3.5/site-packages/frd/pygame/game.py", line 46
    print fontname
                 ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/frd/qt'...
Compiling './lib/python3.5/site-packages/frd/qt/func.py'...
***   File "./lib/python3.5/site-packages/frd/qt/func.py", line 367
    print len(row)
            ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/frd/qt/message.py'...
***   File "./lib/python3.5/site-packages/frd/qt/message.py", line 92
    print iamlosing_api("message.send",params)
                      ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/frd/qt/t.py'...
***   File "./lib/python3.5/site-packages/frd/qt/t.py", line 69
    print 'bind'
               ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/frd/sqlite.py'...
***   File "./lib/python3.5/site-packages/frd/sqlite.py", line 65
    except MySQLdb.Error,e:
                        ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/frd/t.py'...
***   File "./lib/python3.5/site-packages/frd/t.py", line 32
    print functions.iamlosing_api("message.find",params)
                  ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/frd-0.0.7.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
